@@ -1261,11 +1261,10 @@ gconf_database_notify_listeners (GConfDatabase       *db,
 
   g_slist_free (closure.dead);
 
-  if (notify_others)
+  if (modified_sources)
     {
-      g_return_if_fail (modified_sources != NULL);
-
-      gconfd_notify_other_listeners (db, modified_sources, key);
+      if (notify_others)
+          gconfd_notify_other_listeners (db, modified_sources, key);
 
       g_list_free (modified_sources->sources);
       g_free (modified_sources);
